@@ -6,6 +6,8 @@
   (c) 2000--2002 Han-Wen Nienhuys <hanwen@cs.uu.nl>
   
  */
+#include <stdio.h> 
+#include <math.h>
 
 #include "spaceable-grob.hh"
 #include "grob.hh"
@@ -24,6 +26,9 @@ Spaceable_grob::get_minimum_distances (Grob*me)
 void
 Spaceable_grob::add_rod (Grob *me , Grob * p, Real d)
 {
+  //  printf ("rod %lf\n", d);
+
+  
   SCM mins = get_minimum_distances (me);
   SCM newdist = gh_double2scm (d);
   for (SCM s = mins; gh_pair_p (s); s = ly_cdr (s))
@@ -44,13 +49,25 @@ Spaceable_grob::add_rod (Grob *me , Grob * p, Real d)
 void
 Spaceable_grob::add_spring (Grob*me, Grob * p, Real d, Real strength, bool expand_only)
 {
-  if (d < 0.0 || strength <= 0.0)
+  //  printf ("dist %lf, str %lf\n", d, strength); 
+  if (d <= 0.0 || strength <= 0.0)
     {
       programming_error ("Adding reverse spring! Setting to unit spring");
       d = 1.0;
       strength = 1.0;
     }
   
+  if (isinf (d) || isnan(d)
+      || isnan (strength))
+    {
+      /*
+	strength == INF is possible. It means fixed distance.
+       */
+      programming_error ("Insane distance found.");
+      d = 1.0;
+      strength = 1.0;
+    }
+    
 #ifndef NDEBUG
   SCM mins = me->get_grob_property ("ideal-distances");
   for (SCM s = mins; gh_pair_p (s); s = ly_cdr (s))
